--- a/.github/workflows/price_checker.yml
+++ b/.github/workflows/price_checker.yml
@@ -21,7 +21,7 @@ jobs:
       - name: Install Dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install requests beautifulsoup4
+          pip install selenium webdriver-manager
 
       - name: Run Price Check Script
         run: |
